Add mock for certificate check.
