# shared/management/http/api/types.gen.go
@@ -341,8 +341,14 @@ type AvailablePorts struct {
 	Udp int `json:"udp"`
 }
 
+// CertificateCheck Posture check for certificate validation (not implemented)
+type CertificateCheck = map[string]interface{}
+
 // Checks List of objects that perform the actual checks
 type Checks struct {
+	// CertificateCheck Posture check for certificate validation (not implemented)
+	CertificateCheck *CertificateCheck `json:"certificate_check,omitempty"`
+
 	// GeoLocationCheck Posture check for geo location
 	GeoLocationCheck *GeoLocationCheck `json:"geo_location_check,omitempty"`
 
